operatorconfig/moduleconfig/authorization/v1.11.0/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-server
  namespace: <NAMESPACE>
spec:
  ingressClassName: <PROXY_INGRESS_CLASSNAME>
  tls:
  - hosts:
      - <AUTHORIZATION_HOSTNAME>
      - <PROXY_INGRESS_HOST>
    secretName: karavi-auth-tls
  rules:
  - host: <AUTHORIZATION_HOSTNAME>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-server
              port:
                number: 8080
  - host: <PROXY_INGRESS_HOST>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-server
              port:
                number: 8080
  - http:
      paths:
      - backend:
          service:
            name: proxy-server
            port:
              number: 8080
        path: /
        pathType: Prefix
